--- a/static/style.css
+++ b/static/style.css
@@ -732,6 +732,10 @@ body.is-mobile .panel {
   width: calc(100% / var(--scale));
 }
 
+.panel-wrap {
+  width: 100%;
+}
+
 body.is-mobile .grid {
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 14px;
